--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-parallax-tilt": "^1.7.249",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
