--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.249",
     "react-router-dom": "^6.27.0",
